# Discrete-Analysis

./: .gitignore  CMakeLists.txt  Makefile  README.md  RunCP.sh  compile_commands.json  file1.txt  file2.txt  main.cpp  temp.txt  test.txt
CP/: CMakeLists.txt  Makefile  file1.txt  file2.txt  main.cpp  main_proj.cpp
CP/Report/: Makefile
CP/Report/_minted-report/: 6E4FCCAC669693BCD75CCC08D63A8AA847C9B3540D1125908DCE42D08B884BA5.pygtex
CP/Report/src/: literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
CP/include/: DiffProcesser.hpp  FileChange.hpp  FileReader.hpp  flags.hpp  utils.hpp
CP/src/: DiffProcessor.cpp  FileReader.cpp  utils.cpp
Lab 1/: .gitignore  CMakeLists.txt  CountingSort.hpp  benchmark  benchmark.cpp  generator.py  main.cpp
Lab 1/Report/: report.aux
Lab 1/Report/src/: benchmark.tex  src.tex  thinks.tex  titlepage.tex
Lab 2/: CMakeLists.txt  main.cpp
Lab 2/Report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab 2/Report/styles/: log-style.sty
Lab 3/Report/: report.tex
Lab 3/Report/src/: src.tex  thinks.tex
Lab 3/Report/styles/: log-style.sty
Lab 4/: CMakeLists.txt  generator.py  main.cpp
Lab 4/Report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  titlepage.tex
Lab 5/: CMakeLists.txt  main.cpp
Lab 5/Report/_minted-report/: 1D5D1B59D7AA3F88B942F541F58A2B7B47C9B3540D1125908DCE42D08B884BA5.pygtex  7F1B0543878A6D726E2736DFFE662DA147C9B3540D1125908DCE42D08B884BA5.pygtex
Lab 5/Report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab 5/Report/styles/: log-style.sty
Lab 7/: CMakeLists.txt  main.cpp
Lab 7/Report/_minted-report/: C117814DA9905ADC2F9FA14BDD230B0447C9B3540D1125908DCE42D08B884BA5.pygtex
Lab 7/Report/src/: literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab 8/: CMakeLists.txt  main.cpp
Lab 8/Report/_minted-report/: C5028B72BD392CCBF8FCD11814DD551F47C9B3540D1125908DCE42D08B884BA5.pygtex
Lab 8/Report/src/: literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab 9/: CMakeLists.txt  input.txt  main.cpp  main2.cpp
MAI-da/report_pattern/: report.dvi
MAI-da/report_pattern/src/: banchmark.tex  problem.tex  titlepage.tex
MAI-da/report_pattern/styles/: log-style.sty
SearchingTree/: AVLTree.hpp  BTree.hpp  RBTree.hpp  RBTree_base.hpp  Treap.hpp
Sorts/: BucketSort.hpp  CountingSort.hpp  RadixSort.hpp
Strings/: Aho_Korasik.hpp  GeneralizedSuffixTrie.hpp  Hashberg.hpp  SuffixArray.hpp  SuffixTrie.hpp  prefix_function.hpp  z_string.hpp
Strings/src/: Aho_Korasik.cpp  GeneralizedSuffixTrie.cpp  Hashberg.cpp  SuffixArray.cpp  SuffixTrie.cpp  prefix_function.cpp  z_string.cpp
Tries/: compact_trie.hpp  trie.hpp
tests/: Aho_Korasik.cpp  BTree.cpp  Hashberg.cpp  SuffixArray.cpp  SuffixTrie.cpp  compactTrie.cpp  main.cpp  prefix_function.cpp  trie.cpp  utils.cpp  vectorView.cpp  z_string.cpp
utils/: VectorView.hpp  utils.hpp
